fixed issues with extra margins and padding causing extra white space to be added to the right of the screen.

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ nav {
   justify-content: space-evenly;
   align-items: center;
   border-bottom: solid 3px #a3f1a2;
-
+  border-top: solid 3px #a3f1a2;
 }
 
 h2 {
@@ -199,11 +199,12 @@ hr {
   width: 1123px;
   height: 150px;
   background: #a3f1a2;
-  border: 4px solid #a3f1a2;
+  
   grid-area: 1 / 1 / 1 / span 2;
-  padding-left: 2em;
+
   transition-duration: 0.5s;
   transition-timing-function: ease-in-out;
+  padding-bottom: 2em;
 }
 
 .activity-summary {
@@ -235,9 +236,9 @@ h4 {
   font-weight: 700;
   font-size: 20px;
   line-height: 100%;
-  width: 550px;
+  width: 45%;
   letter-spacing: 0.06em;
-
+  margin-left: 32px;
   color: #000000;
 }
 
@@ -247,10 +248,9 @@ h5 {
   font-weight: 700;
   font-size: 15px;
   line-height: 100%;
-  /* or 15px */
-
+  margin-left: 32px;
+  width: 550px;
   letter-spacing: 0.06em;
-
   color: #000000;
 }
 
@@ -274,7 +274,7 @@ p {
   height: 150px;
 
   grid-area: 1 / 1 / 1 / span 2;
-  padding-left: 2em;
+
 }
 
 .education-summary {
@@ -292,12 +292,21 @@ p {
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr;
   border: solid 5px #4ace48;
-  padding: 1em;
-  padding-bottom: 2em;
+  padding: 1em 0 2em;
   width: 1123px;
   margin: 100px auto;
   align-content: center;
   column-gap: 3em;
+}
+
+.MEHS{
+
+  border: solid 5px #4ace48;
+
+  padding: 1em 0 2em;
+  width: 1123px;
+  margin: 100px auto;
+
 }
 
 .education p {
@@ -349,9 +358,8 @@ footer {
   background: #4ace48;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-    border-top: solid 3px #a3f1a2;
+  border-top: solid 3px #a3f1a2;
 }
-
 
 img {
   height: 400px;
@@ -389,7 +397,7 @@ img {
     width: 100%;
     height: 150px;
     background: #a3f1a2;
-    border: 4px solid #a3f1a2;
+
     grid-area: 1 / 1 / 1 / span 2;
   }
 
@@ -476,12 +484,23 @@ img {
     border-bottom: solid 5px #4ace48;
     border-left: 0;
     border-right: 0;
-    padding: 1em;
+
     padding-bottom: 2em;
     margin: 100px auto;
     align-content: center;
     column-gap: 4.5em;
   }
+  .MEHS{
+
+  border-top: solid 5px #4ace48;
+  border-bottom: solid 5px #4ace48;
+  border-right: none;
+  border-left: none;
+  padding: 1em 0 2em;
+  width: 100%;
+  margin: 100px auto;
+
+}
   span {
     font-family: "Montserrat";
     font-style: normal;
@@ -533,8 +552,7 @@ img {
     align-items: center;
   }
 
-
-    .activity:hover .activity-summary {
+  .activity:hover .activity-summary {
     scale: 130%;
     margin-top: 7em;
   }
@@ -568,7 +586,7 @@ img {
   }
 
   .nav-button {
-    padding: 20px;
+    padding: 20px 0;
     width: 100%;
 
     background: #daffd9;
@@ -656,7 +674,7 @@ img {
     width: 100%;
     height: 200px;
     background: #a3f1a2;
-    border: 4px solid #a3f1a2;
+
     grid-area: 1 / 1 / 1 / 1;
   }
 
@@ -737,18 +755,28 @@ img {
 
   .education {
     display: grid;
-    width: 500px;
+    width: 100%;
 
     grid-template-rows: 100px 250px;
     grid-template-columns: 1fr;
-    border: solid 5px #4ace48;
+        border-top: solid 5px #4ace48;
+    border-bottom: solid 5px #4ace48;
+    border-left: none;
+    border-right: none;
 
     justify-content: center;
   }
-  .MEHS {
-    display: flex;
-    height: 200px;
-  }
+.MEHS{
+
+  border-top: solid 5px #4ace48;
+  border-bottom: solid 5px #4ace48;
+  border-right: none;
+  border-left: none;
+  padding: 1em 0 2em;
+  width: 100%;
+  margin: 100px auto;
+
+}
   img {
     height: 500px;
     border: 5px solid #4ace48;
@@ -800,7 +828,7 @@ img {
     align-items: center;
   }
 
-  .email{
+  .email {
     align-self: flex-end;
   }
 }
@@ -942,12 +970,12 @@ img {
   }
   .education-summary {
     width: 100%;
-    padding: 1em 0em 3em;
+    padding: 1em 0 3em;
     height: 250px;
     background: #daffd9;
     grid-area: 1 / 1 / 1 / 1;
     margin-top: 8em;
-   
+
     justify-self: center;
   }
 
@@ -962,7 +990,7 @@ img {
     border-bottom: solid 5px #4ace48;
     border-left: none;
     border-right: none;
-        padding: 0em;
+    padding: 0em;
   }
   .MEHS {
     display: flex;
@@ -987,7 +1015,7 @@ img {
     width: 86%;
     font-size: 14px;
     margin: 0;
-      font-weight: 600;
+    font-weight: 600;
   }
   .credit {
     text-align: center;
@@ -998,8 +1026,7 @@ img {
   footer {
     width: 100%;
   }
-  .email{
+  .email {
     margin-right: 0;
   }
 }
-
